# snippets

./: .clang-format  .gitignore  CrackEgg.hs  DictSomething.hs  DupChanExample.hs  EEA.hs  Free.hs  Fullwidth.hs  Hex.hs  IRCat.hs  Ittle1.hs  LICENSE.txt  Makefile  MatFib.hs  Muller.hs  PS2gun.hs  Peano.hs  PermutationsCombinations.hs  Power.hs  PrequelPeg.hs  PrimeLastDigit.hs  Pwd.hs  RC4.hs  README.txt  RK4.hs  RecentQueueLength.hs  SlowProxy.hs  ToTheMoon.hs  WideLines.hs  a_softer_world_♥_title_text.user.js  achewood.user.js  alldns.py  allfg.c  argcargv.c  atomics.c  brightness-control.c  bubble.c  calc.py  crash.c  draw_from_poisson.js  (+69 more)
coil/: build.gradle
coil/src/main/java/hello/: Greeter.java  HelloWorld.java
euler/: Euler1.hs  Euler12.hs  Euler8.hs
gltut/: Makefile  Tut01.hs  monotime.c
jni_microbenchmark/: ClockMono.java  Makefile  README.txt  clockmono.c  libcclockmono.c  libjclockmono.c
llvm/: LICENSE  Main.hs  kaleidoscope.cabal
llvm/Kaleidoscope/: Main.hs  Parser.hs
llvm/src/: Kaleidoscope.hs
llvm/src/Kaleidoscope/: Main.hs  Parser.hs
witchcraft/: crappy_webgl_julia.html  crappy_webgl_mandelbrot.html  gl.html  gl.js  sliding-fullwidth-things.html  texty.html  tryme.html  tryme.js
witchcraft/fractals4qualia/: circlebrot.html  continuous-julia-ish.html  cyclic-cellular-automaton.html  fractal-cca.js  gl-main.js  gl.html  julia.html  mandelbrot.html  rabbitoid.html  squarebrot.html  wibbly-mandelbrot-ish.html
