name:                kaleidoscope

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Following http://llvm.org/tutorial/ in Haskell
license:             BSD3
license-file:        LICENSE
author:              Richard Barrell
maintainer:          rchrd@brrll.co.uk
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Kaleidoscope,
                       Kaleidoscope.Parser,
                       Kaleidoscope.Main
  build-depends:       base ==4.5.*, parsec (>= 3.1.3 && <4)
  hs-source-dirs:      src

executable kaleidoscope
  main-is:             Main.hs
  build-depends:       base, kaleidoscope
  hs-source-dirs:      .
